--- a/package.json
+++ b/package.json
@@ -1,21 +1,48 @@
 {
-  "name": "IKKS-Way",
+  "name": "front-starter-kit",
   "version": "1.0.0",
-  "description": "Way by IKKS Grunt workflow",
-  "main": "Gruntfile.js",
+  "description": "This is a starter kit for setting up any web project faster.",
+  "main": "gulpfile.js",
+  "dependencies": {
+    "gulp": "^3.8.11",
+    "gulp-compass": "^2.0.4",
+    "gulp-concat": "^2.5.2",
+    "gulp-concat-css": "^2.2.0",
+    "gulp-consolidate": "^0.1.2",
+    "gulp-iconfont": "^3.0.0",
+    "gulp-if": "^1.2.5",
+    "gulp-minify-css": "^1.1.1",
+    "gulp-order": "^1.1.1",
+    "gulp-plumber": "^1.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.2.0",
+    "lodash": "^3.8.0",
+    "yargs": "^3.10.0",
+    "gulp-ignore": "^2.0.1"
+  },
+  "devDependencies": {
+    "gulp-jshint": "^1.11.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Hugo Dessomme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/umanit/css-starterkit.git"
+  },
+  "keywords": [
+    "css",
+    "js",
+    "javascript",
+    "frontend",
+    "front",
+    "development",
+    "preprocessor"
+  ],
+  "author": "UmanIT",
   "license": "ISC",
-  "devDependencies": {
-    "autoprefixer": "^6.1.0",
-    "cssnano": "^3.3.2",
-    "grunt": "^0.4.5",
-    "grunt-browser-sync": "^2.2.0",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-postcss": "^0.7.1",
-    "load-grunt-tasks": "^3.3.0"
-  }
+  "bugs": {
+    "url": "https://github.com/umanit/css-starterkit/issues"
+  },
+  "homepage": "https://github.com/umanit/css-starterkit#readme"
 }
