Refactoring : config Gulp par typoe de projet

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,5 @@
 .DS_Store
 .idea/
 .sass-cache/
-index.html
-styleguide/*.html
-assets/css
-assets/js/scripts.js
-assets/scss/.DS_Store
-assets/scss/vendor/.DS_Store
 node_modules
-TODO.md
-.DS_Store
-/styleguide/*.html
-style.scss
-scripts.js
-package-lock.json
+styleguide
