--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gulp-consolidate": "^0.1.2",
     "gulp-iconfont": "^3.0.0",
     "gulp-if": "^1.2.5",
-    "gulp-minify-css": "^1.1.1",
+    "gulp-clean-css": "^3.0.4",
     "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.0.0",
     "gulp-rename": "^1.2.2",
